--- a/app/src/main/res/layout/fragment_puzzle.xml
+++ b/app/src/main/res/layout/fragment_puzzle.xml
@@ -4,11 +4,121 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".PuzzleFragment">
-    <TextView
-            android:id="@+id/puzzleCodeTextView"
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:id="@+id/linearLayout">
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout">
+
+            <TextView android:layout_width="0dp"
+                      android:layout_height="wrap_content"
+                      android:layout_weight="3"
+                      android:gravity="start"
+                      android:textSize="20sp"
+                      android:text="1. Boolean"
+                      android:layout_gravity="start"/>
+
+
+            <ImageButton
+
+                    android:src="@android:drawable/ic_menu_view"
+
+
+                    android:layout_width="0dp"
+                    android:layout_gravity="end"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+
+            />
+
+            <ImageButton
+                    android:src="@android:drawable/ic_menu_help"
+
+
+                    android:layout_width="0dp"
+
+                    android:layout_gravity="end"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+            <ImageButton
+                    android:src="@android:drawable/ic_menu_preferences"
+
+                    android:layout_width="0dp"
+                    android:layout_gravity="end"
+                    android:layout_height="wrap_content"
+
+                    android:layout_weight="1"/>
+
+        </LinearLayout>
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+            <TextView android:layout_width="0dp" android:layout_height="wrap_content"
+                      android:layout_weight="4"
+                      android:text="Подберите входные параметры программы так, чтобы условие condition было верно"
+                      android:layout_gravity="start"/>
+
+
+        </LinearLayout>
+
+
+        <TextView
+                android:id="@+id/puzzleCodeTextView"
+                android:text="TextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:minLines="30"
+        />
+        <TextView
+                android:id="@+id/puzzleConsoleTextView"
+                android:text="> console output"
+                android:textColor="@color/white"
+                android:background="@color/black"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minLines="5"
+        />
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <EditText
+                    android:id="@+id/puzzleTextInput1"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:autofillHints="false"
+                    android:inputType="text"
+                    android:hint="Type answer here"
+            />
+            <ImageButton
+                    android:id="@+id/runPuzzleButton"
+
+                    android:src="@android:drawable/ic_media_play"
+
+
+                    android:layout_width="0dp"
+
+                    android:layout_gravity="end"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+<!--    <WebView-->
+<!--            android:id="@+id/puzzleCodeWebView"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent" tools:layout_editor_absoluteY="395dp"-->
+<!--            tools:layout_editor_absoluteX="0dp"/>-->
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
