--- a/app/src/main/res/layout/fragment_puzzle.xml
+++ b/app/src/main/res/layout/fragment_puzzle.xml
@@ -14,60 +14,60 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/linearLayout">
+            <Button
+                    android:text="&lt;"
+                    android:textSize="20sp"
+                    android:layout_width="0dp"
+                    android:layout_gravity="start"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
 
             <TextView android:layout_width="0dp"
-                      android:layout_height="wrap_content"
+                      android:layout_height="match_parent"
                       android:layout_weight="3"
-                      android:gravity="start"
+                      android:gravity="center_vertical|start"
                       android:textSize="20sp"
                       android:text="1. Boolean"
                       android:layout_gravity="start"/>
-
-
             <ImageButton
-
                     android:src="@android:drawable/ic_menu_view"
-
-
                     android:layout_width="0dp"
                     android:layout_gravity="end"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-
-            />
+                    android:layout_weight="1"/>
 
             <ImageButton
                     android:src="@android:drawable/ic_menu_help"
-
-
                     android:layout_width="0dp"
-
                     android:layout_gravity="end"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"/>
+
             <ImageButton
                     android:src="@android:drawable/ic_menu_preferences"
-
                     android:layout_width="0dp"
                     android:layout_gravity="end"
                     android:layout_height="wrap_content"
-
                     android:layout_weight="1"/>
 
         </LinearLayout>
+        <View style="@style/Divider"/>
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
             <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                       android:layout_weight="4"
+                      android:padding="8dp"
                       android:text="Подберите входные параметры программы так, чтобы условие condition было верно"
                       android:layout_gravity="start"/>
 
 
         </LinearLayout>
-
+        <View style="@style/Divider"/>
 
         <TextView
                 android:id="@+id/puzzleCodeTextView"
                 android:text="TextView"
+                android:fontFamily="monospace"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
