--- a/app/src/main/res/layout/fragment_puzzle_list.xml
+++ b/app/src/main/res/layout/fragment_puzzle_list.xml
@@ -20,6 +20,38 @@
                     android:weightSum="2"
                     android:orientation="horizontal">
                 <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/puzzleCard2"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:checkable="true"
+                        android:layout_weight="1"
+                        android:layout_columnWeight="1"
+                        android:layout_rowWeight="1"
+                        android:layout_margin="8dp">
+
+                    <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:padding="10dp">
+
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="2. UPPERCASE "
+                                android:textAppearance="?attr/textAppearanceBody2"
+                        />
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="tries: 123"
+                                android:layout_gravity="end"
+                                android:textColor="?android:attr/textColorSecondary"
+                                android:textAppearance="?attr/textAppearanceBody2"/>
+                    </LinearLayout>
+
+                </com.google.android.material.card.MaterialCardView>
+                <com.google.android.material.card.MaterialCardView
                         android:id="@+id/puzzleCard1"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
@@ -39,7 +71,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="1. UPPERCASE MAY"
-                                android:textAppearance="?attr/textAppearanceBody1"
+                                android:textAppearance="?attr/textAppearanceBody2"
                         />
                         <TextView
                                 android:layout_width="wrap_content"
@@ -51,39 +83,7 @@
                     </LinearLayout>
 
                 </com.google.android.material.card.MaterialCardView>
-                <com.google.android.material.card.MaterialCardView
-                        android:id="@+id/card2"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:checkable="true"
-                        android:layout_weight="1"
-                        android:layout_columnWeight="1"
-                        android:layout_rowWeight="1"
-                        android:layout_margin="8dp">
 
-                    <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical"
-                            android:padding="10dp">
-
-                        <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="2. CardTItle sdf"
-                                android:textAppearance="?attr/textAppearanceBody1"
-                        />
-                        <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:text=""
-                                android:layout_gravity="end|bottom"
-                                android:textColor="?android:attr/textColorSecondary"
-                                android:textAppearance="?attr/textAppearanceBody2"
-                        />
-                    </LinearLayout>
-
-                </com.google.android.material.card.MaterialCardView>
 
             </LinearLayout>
         </LinearLayout>
