--- a/app/src/main/res/layout/fragment_puzzle_list.xml
+++ b/app/src/main/res/layout/fragment_puzzle_list.xml
@@ -42,9 +42,10 @@
                                 android:textAppearance="?attr/textAppearanceBody2"
                         />
                         <TextView
+                                android:id="@+id/puzzleTriesText2"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="tries: 123"
+                                android:text=""
                                 android:layout_gravity="end"
                                 android:textColor="?android:attr/textColorSecondary"
                                 android:textAppearance="?attr/textAppearanceBody2"/>
@@ -74,9 +75,10 @@
                                 android:textAppearance="?attr/textAppearanceBody2"
                         />
                         <TextView
+                                android:id="@+id/puzzleTriesText1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="tries: 123"
+                                android:text=""
                                 android:layout_gravity="end"
                                 android:textColor="?android:attr/textColorSecondary"
                                 android:textAppearance="?attr/textAppearanceBody2"/>
